--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>КУРАЖ ТУР</title>
 	<link rel="stylesheet" href="main.css">
-	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 	<header>
@@ -19,13 +19,294 @@
 			<a href="#"><i class="fab fa-instagram"></i></a>
 		</div>
 		<ul class="images">
-			<li class="slide show"><img src="jpg/banner1.jpg"></li>
+			<li class="slide show"><img src="jpg/banner1.jpg" class="mmm"></li>
 			<li class="slide"><img src="jpg/banner2.jpg"></li>
 			<li class="slide"><img src="jpg/banner3.jpg"></li>
 			<li class="slide"><img src="jpg/banner4.jpg"></li>
 			<li class="slide"><img src="jpg/banner5.jpg"></li>
 		</ul>
+		<div class="shadedBox"></div>
+		<div class="contentBox">
+			<p>Лучшие предложения по солнечному Египту из Харькова</p>
+			<div class="btn">Получить предложение</div>
+		</div>
+		<div class="switcher">
+			<div class="dot active"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+		</div>
+		<div class="menu">
+			<a href="#">Главная</a>
+			<a href="#" class="hidMenShow">Туры <i class="fas fa-chevron-down"></i></a>
+			<a href="#">Страны</a>
+			<a href="#" class="hidMenShow">Услуги <i class="fas fa-chevron-down"></i></a>
+			<a href="#">О компании</a>
+			<a href="#">Контакты</a>
+		</div>
+		<div class="hiddenMenu">
+			<a href="#">Горящие туры</a>
+			<a href="#">Поиск тура</a>
+			<a href="#">Туры по Украине</a>
+			<a href="#">Экскурсионные туры</a>
+			<a href="#">Week end туры</a>
+		</div>
+		<div class="hiddenMenu">
+			<a href="#">Авиабилеты</a>
+			<a href="#">Визовая поддержка</a>
+			<a href="#">Индивидуальный трансфер</a>
+			<a href="#">Подарочные сертификаты</a>
+			<a href="#">Бронирование отелей и апартаментов</a>
+			<a href="#">Как забронировать и оплатить тур</a>
+		</div>
 	</header>
+	<section id="tours">
+		<div class="typeOfTours">
+			<h3 class="clicked">Горящие туры</h3>
+			<h3>Популярные туры</h3>
+		</div>
+		<div class="contentArea">
+			<button class="arrow prev"><i class="fas fa-chevron-left"></i></button>
+			<div class="area">
+				<ul>
+					<li class="lii">
+					<div class="burn contentBlock">
+						<img src="jpg/water.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br/> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="burn contentBlock">
+						<img src="jpg/beach.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="burn contentBlock">
+						<img src="jpg/beach.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="burn contentBlock">
+						<img src="jpg/water.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="burn contentBlock">
+						<img src="jpg/beach.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="burn contentBlock">
+						<img src="jpg/water.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="popular contentBlock update">
+						<img src="jpg/beach.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="popular contentBlock update">
+						<img src="jpg/water.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="popular contentBlock update">
+						<img src="jpg/beach.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="popular contentBlock update">
+						<img src="jpg/water.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="popular contentBlock update">
+						<img src="jpg/water.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+					<li class="lii">
+					<div class="popular contentBlock update">
+						<img src="jpg/beach.jpg">
+						<div class="textBox">
+							<h5>8 марта в Cyrene Sharm hotel</h5>
+							<h6>(12.03.2018 — 19.03.2018)</h6>
+							<p>Перелёт, питание по системе all inclusive,<br /> трансфер</p>
+							<div class="priceString">
+								<h4>1 259 грн</h4>
+								<h6>/за 1 человека</h6>
+								<div><i class="fas fa-chevron-right"></i></div>
+							</div>
+						</div>
+					</div>
+					</li>
+				</ul>
+			</div>
+			<button class="arrow next"><i class="fas fa-chevron-right"></i></button>
+		</div>
+	</section>
 
+	<section id="advantages">
+		<h2>НАШИ ПРЕИМУЩЕСТВА</h2>
+		<div>
+			<img src="jpg/aqualangist.jpg">
+			<p>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. </p>
+		</div>
+	</section>
+	<section id="want">
+		<h2>ХОЧУ ПРЕДЛОЖЕНИЕ ПО ТУРУ</h2>
+		<div class="shadedBox1"></div>
+		<div class="contentBox1">
+			<input value="Имя">
+			<input value="Email">
+			<input value="Телефон">
+			<p class="hidMenShow">Страна тура <i class="fas fa-chevron-down"></i></p>
+			<div class="btn">Получить предложение</div>
+		</div>
+		<div class="hiddenMenu onBottom">
+			<p>Турция</p>
+			<p>Египет</p>
+			<p>Шри-Ланка</p>
+			<p>Доминикана</p>
+		</div>
+	</section>
+
+	<footer>
+		<div class="column1">
+			<img src="jpg/footer-logo.png">
+			<div></div>
+			<p>Кураж тур агенство,которое предоставляет услуги по поиску, оформлению и подбору туров для вас и ваших родных.</p>
+			<div></div>
+			<p class="pOfCol">Создание сайта — <img src="jpg/footer-logo2.png"></p>
+		</div>
+		<div class="column2">
+			<h4>Навигация</h4>
+			<p>Главная <br/>О компани <br/>Туры  <br/>Контакты <br/>Услуги </p>
+		</div>
+		<div class="column3">
+			<h4>Поддержка</h4>
+			<p>FAQ <br/>Блог <br/>Обратная связь </p>
+		</div>
+		<div class="column4">
+			<h4>Контакты</h4>
+			<p><i class="fas fa-map-marker-alt"></i> г. Харьков, ул. Мироносицкая 10а</p>
+			<p><i class="fas fa-phone"></i> +38 (099) 990-81-00  (viber, telegram)</p>
+			<div></div>
+			<a href="#"><i class="fab fa-facebook-square"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+		</div>
+	</footer>
+<script src="script.js"></script>
+<script src="switchTours.js"></script>
 </body>
 </html>
