--- a/index.html
+++ b/index.html
@@ -258,18 +258,22 @@
 
 	<section id="advantages">
 		<h2>НАШИ ПРЕИМУЩЕСТВА</h2>
-		<div>
+		<div class="wrap">
 			<img src="jpg/aqualangist.jpg">
-			<p>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море. </p>
+			<div class="container">
+				<p>Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в путешествии и не могли определиться... Решили обратиться за помощью в турагенство. Гульнара, выслушав все пожелания, предложила отдых в Турции, отель Justiniano Club Park Conti 5* в Окурджалар возле Аланьи. Мы очень благодарны ей за предложенный вариант!!!! Отдых получился отличный! Отель с большой ухоженной территорией, внимательный обслуживающий персонал. Отличный номер с видом на море.<br/>1<br/>2<br/>3 </p>
+			</div>
 		</div>
+		<div class="line"></div>
+		<div class="scrollingDot"></div>
 	</section>
 	<section id="want">
 		<h2>ХОЧУ ПРЕДЛОЖЕНИЕ ПО ТУРУ</h2>
 		<div class="shadedBox1"></div>
 		<div class="contentBox1">
-			<input value="Имя">
-			<input value="Email">
-			<input value="Телефон">
+			<input class="name" placeholder="Имя">
+			<input class="email" placeholder="Email">
+			<input class="tel" placeholder="Телефон">
 			<p class="hidMenShow">Страна тура <i class="fas fa-chevron-down"></i></p>
 			<div class="btn">Получить предложение</div>
 		</div>
