--- a/index.html
+++ b/index.html
@@ -293,15 +293,15 @@
 			<div></div>
 			<p class="pOfCol">Создание сайта — <img src="jpg/footer-logo2.png"></p>
 		</div>
-		<div class="column2">
+		<div class="column2 column">
 			<h4>Навигация</h4>
 			<p>Главная <br/>О компани <br/>Туры  <br/>Контакты <br/>Услуги </p>
 		</div>
-		<div class="column3">
+		<div class="column3 column">
 			<h4>Поддержка</h4>
 			<p>FAQ <br/>Блог <br/>Обратная связь </p>
 		</div>
-		<div class="column4">
+		<div class="column4 column">
 			<h4>Контакты</h4>
 			<p><i class="fas fa-map-marker-alt"></i> г. Харьков, ул. Мироносицкая 10а</p>
 			<p><i class="fas fa-phone"></i> +38 (099) 990-81-00  (viber, telegram)</p>
